Update fonts config

--- a/packages/design-system/css/base/font.css
+++ b/packages/design-system/css/base/font.css
@@ -1,7 +1,7 @@
 @layer base {
   /* ============= Primary - Quicksand ============= */
-  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@;400;500;600;700&display=swap');
 
-  /* ============= Secondary - Nunito Sans ============= */
-  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+  /* ============= Secondary - Cabin ============= */
+  @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap');
 }
