--- a/packages/design-system/css/base.css
+++ b/packages/design-system/css/base.css
@@ -1,4 +1,23 @@
-@import 'tailwindcss/base';
+@import "tailwindcss/base";
 
-@import 'base/font';
-@import 'base/html';
+@layer base {
+  html,
+  body {
+    @apply w-full h-full;
+    scroll-behavior: smooth;
+  }
+
+  html {
+    ::-webkit-scrollbar {
+      @apply w-6 h-6 bg-neutral-3;
+    }
+
+    ::-webkit-scrollbar-track {
+      @apply rounded-10;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      @apply rounded-10 bg-neutral-5 transition-all hover:bg-neutral-6;
+    }
+  }
+}
