--- a/packages/design-system/css/index.css
+++ b/packages/design-system/css/index.css
@@ -1,3 +1,5 @@
-@import 'base';
-@import 'components';
-@import 'utilities';
+@import "font";
+
+@import "base";
+@import "components";
+@import "utilities";
